Add trigger deploy production

--- a/build.gradle
+++ b/build.gradle
@@ -1,55 +1,30 @@
 plugins {
     id 'java'
-    id 'application'
+    id 'org.springframework.boot' version '3.2.0'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
-group = 'br.olx.crawler'
-version = '1.0-SNAPSHOT'
-
-// Definir a classe principal para execução
-application {
-    mainClass = 'br.olx.crawler.OlxCrawler'
-}
-
-compileJava {
-    options.encoding = 'UTF-8'
-}
-
-compileTestJava {
-    options.encoding = 'UTF-8'
-}
-
-javadoc {
-    options.encoding = 'UTF-8'
-}
+group = 'br.olx'
+version = '1.0.0'
+sourceCompatibility = '17'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.2'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
-    implementation 'com.google.guava:guava:32.1.2-jre'
-    implementation 'org.apache.commons:commons-lang3:3.13.0'
-    implementation 'org.slf4j:slf4j-api:2.0.9'
-    implementation 'ch.qos.logback:logback-classic:1.4.11'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.2.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
 
-    // Lombok
-    compileOnly 'org.projectlombok:lombok:1.18.30'
-    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'io.projectreactor:reactor-test'
 }
 
-test {
+tasks.named('test') {
     useJUnitPlatform()
-}
-
-// Configurar JVM para executar com UTF-8
-run {
-    systemProperty 'file.encoding', 'UTF-8'
-    systemProperty 'console.encoding', 'UTF-8'
-    jvmArgs '-Dfile.encoding=UTF-8'
 }
