--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,20 +6,37 @@ spring:
     name: olx-crawler
   webflux:
     base-path: /
+  data:
+    mongodb:
+#      uri: ${SPRING_DATA_MONGODB_URI:mongodb://localhost:27017}
+      # Tentando conectar no banco admin primeiro
+      uri: mongodb://elieser:5504609873@164.152.49.203:27017/admin
+      database: crawler
+
+security:
+  jwt:
+    secret: ${JWT_SECRET:mySecretKey123456789012345678901234567890}
+    expiration: 86400000 # 24 hours in milliseconds
 
 springdoc:
   api-docs:
     path: /api-docs
+    enabled: true
   swagger-ui:
     path: /swagger-ui.html
     enabled: true
+    try-it-out-enabled: true
+    operations-sorter: alpha
+    tags-sorter: alpha
+  show-actuator: false
+  paths-to-match: /api/**
   info:
     title: OLX Crawler API
-    description: API para buscar motos Yamaha MT-09 Tracer no OLX do Rio Grande do Sul
+    description: API para crawler OLX
     version: 1.0.0
     contact:
       name: OLX Crawler Team
-      email: suporte@olxcrawler.com
+      email: prixua@gmail.com
   servers:
     - url: http://localhost:8080
       description: Servidor de desenvolvimento
@@ -35,6 +52,7 @@ management:
 
 logging:
   level:
-    br.olx.crawler: INFO
+    br.olx.crawler: DEBUG
     org.springframework: WARN
     reactor.netty: WARN
+    spring.data.mongodb.core: DEBUG
