--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     mongodb:
 #      uri: ${SPRING_DATA_MONGODB_URI:mongodb://localhost:27017}
       # Tentando conectar no banco admin primeiro
-      uri: mongodb://elieser:5504609873@164.152.49.203:27017/admin
+      uri: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_HOST:127.0.0.1}:27017/admin
       database: crawler
 
 security:
