--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 .gradle
+.gradle/*
 build/
+build/*
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
+.idea/*
+.idea
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -50,3 +54,4 @@ bin/
 /.gradle/
 /.env.production
 /.idea/inspectionProfiles/Project_Default.xml
+/.idea/
