--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,25 @@ spring:
     name: olx-crawler
   webflux:
     base-path: /
+    cors:
+      allowed-origins:
+        - "https://${DUCKDNS_DOMAIN:olx-crawler}.duckdns.org"
+        - "http://localhost:3000"
+        - "http://localhost:8080"
+      allowed-methods:
+        - GET
+        - POST
+        - PUT
+        - DELETE
+        - OPTIONS
+      allowed-headers:
+        - "Content-Type"
+        - "Authorization"
+        - "X-Requested-With"
+        - "x-auth-type"
+        - "Accept"
+        - "Origin"
+      allow-credentials: true
   data:
     mongodb:
 #      uri: ${SPRING_DATA_MONGODB_URI:mongodb://localhost:27017}
