Ajusta docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,10 @@ services:
       MONGO_HOST: mongodb  # Nome do serviço MongoDB
       DUCKDNS_DOMAIN: ${DUCKDNS_DOMAIN}
       DUCKDNS_TOKEN: ${DUCKDNS_TOKEN}
+      SPRING_MAIL_USERNAME: ${SPRING_MAIL_USERNAME}
+      SPRING_MAIL_PASSWORD: ${SPRING_MAIL_PASSWORD}
+      CRAWLER_EMAIL_FROM: ${CRAWLER_EMAIL_FROM}
+      CRAWLER_EMAIL_TO: ${CRAWLER_EMAIL_TO}
     depends_on:
       - mongodb
 
